update may30 entry

--- a/learning_journal/learning_journal/scripts/index.html
+++ b/learning_journal/learning_journal/scripts/index.html
@@ -8,9 +8,13 @@
         <article>
             <h1>Today I leaned ...</h1>
             <hr />
-            <p>Created <strong>June, 2017</strong></p>
+            <p>Created <strong>May 30, 2017</strong></p>
             <hr />
-            <p>Today I learned ...</p>
+            <p>Today I learned about pyramid framework and push
+            to heroku.  I learnt heroku deployment in 301, forgot 
+            most of the stuff, like building a blog, so sad, like
+            I have to relearned everything again.
+            </p>
         </article>
     </body>
 </html>
